Category Management: Fix CSS bleeding

--- a/src/features/category_management/category_management.css
+++ b/src/features/category_management/category_management.css
@@ -1,3 +1,3 @@
-.active {
-    background-color:chartreuse;
-  }
+#categoryManagementCatSuggestion .active {
+  background-color: chartreuse;
+}
